# ObjCDT

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  main.cpp
.cache/clangd/index/: main.cpp.5B72BBE7BB1B8C89.idx  mesh.cpp.2934D5D578C4611B.idx  mesh.h.5AB7D2819105D8FF.idx  surface_mesh.cpp.157EE2ECA72B5D89.idx
cmake/: depend.cmake
include/: hashable.h  mesh.h  surface_mesh.h
src/: mesh.cpp  surface_mesh.cpp
